# AnalizadorPLSQL

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: sample.sql  sample_bad.sql
plsql_analyzer/: __init__.py  agent.py  standards.py  tools.py
