[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analizador-plsql"
version = "0.1.0"
description = "PL/SQL Standards Analyzer powered by Claude AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
analizador-plsql = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plsql_analyzer*"]
